fix strong styling so that text isn't blurry

--- a/src/public/includes/css/main.css
+++ b/src/public/includes/css/main.css
@@ -34,11 +34,10 @@ a:hover {
 }
 
 strong {
-	font-weight: bolder;
 	font-size: 120%;
 }
 
-table strong {
+.latestNote strong {
 	font-size: 100%;
 }
 
